# balasolu-dev

./: Cargo.toml  api-deployment.yaml  api-service.yaml  client-deployment.yaml  client-service.yaml  docker-compose-debug.yml  nginx-deployment.yaml  nginx-service.yaml  package-lock.json  package.json
etc/docker/: Dockerfile.api.debug  Dockerfile.client.debug
etc/nginx/: nginx-debug.conf  nginx-release.conf
src/api/: .env  Cargo.toml
src/api/migrations/2022-10-04-172321_initial/: up.sql
src/api/src/: main.rs  schema.rs
src/api/src/models/: user.rs
src/client/: Cargo.toml
src/client/react-app/: package-lock.json  package.json
src/client/react-app/src/: App.tsx
src/client/react-app/src/components/: About.tsx  Contact.tsx  Footer.tsx  Header.tsx  Service.tsx  ServiceButton.tsx  Services.tsx  TopBar.tsx
src/client/src/: main.rs
